--- a/application/themes/admin/assets/css/sass/base/_page-header.scss
+++ b/application/themes/admin/assets/css/sass/base/_page-header.scss
@@ -276,7 +276,7 @@ html.sidebar-right-opened .page-header {
 
 		h2 {
 			font-size: 16px;
-			padding: 0 15px 0;
+			padding: 0 15px;
 			overflow: hidden;
 			text-overflow: ellipsis;
 			white-space: nowrap;
