--- a/application/themes/admin/assets/css/sass/base/_skeleton.scss
+++ b/application/themes/admin/assets/css/sass/base/_skeleton.scss
@@ -415,7 +415,7 @@ a:active {
 		}
 
 		.content-body {
-			border-radius: 0 0 5px 0;
+			border-radius: 0 0 5px;
 		}
 
 		.sidebar-right {
@@ -438,7 +438,7 @@ a:active {
 		}
 
 		.header {
-			border-radius: 5px 0 0 0;
+			border-radius: 5px 0 0;
 		}
 
 		.content-body {
@@ -449,7 +449,7 @@ a:active {
 			bottom: 20px;
 			position: absolute;
 			top: 25px;
-			border-radius: 0 5px 5px 5px;
+			border-radius: 0 5px 5px;
 		}
 	}
 }
