--- a/application/themes/admin/assets/css/sass/gui/_misc.scss
+++ b/application/themes/admin/assets/css/sass/gui/_misc.scss
@@ -223,7 +223,7 @@ html.dark {
 
 /* Filters Sidebar Wrapper */
 .filters-sidebar-wrapper {
-	padding: 30px 15px 30px;
+	padding: 30px 15px;
 	box-shadow: 0px 0px 37px -36px rgba(0, 0, 0, 0.4);
 	a {
 		color: inherit;
