--- a/application/themes/admin/assets/css/sass/gui/_typography.scss
+++ b/application/themes/admin/assets/css/sass/gui/_typography.scss
@@ -1,7 +1,7 @@
 /* Blockquotes */
 blockquote {
     border-left: 5px solid #eee;
-    margin: 0 0 1rem 0;
+    margin: 0 0 1rem;
     padding: 0.5rem 1rem;
 	font-size: 1em;
 
