--- a/application/themes/admin/assets/css/sass/gui/_widgets.scss
+++ b/application/themes/admin/assets/css/sass/gui/_widgets.scss
@@ -11,7 +11,7 @@
 		font-weight: 700;
 		left: 0;
 		letter-spacing: -1px;
-		padding: 9px 11px 9px;
+		padding: 9px 11px;
 		position: absolute;
 		text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 		text-transform: uppercase;
@@ -32,7 +32,7 @@
 		font-size: 12px;
 		font-weight: 400;
 		letter-spacing: 0;
-		margin: 8px -2px -15px -2px;
+		margin: 8px -2px -15px;
 		padding: 2px 9px;
 		text-transform: none;
 	}
