--- a/application/themes/frostbret/assets/css/global/general.css
+++ b/application/themes/frostbret/assets/css/global/general.css
@@ -114,7 +114,7 @@ img {
 .navbar-side .navbar-nav .nav-item{
     width:100%;
     height:auto;
-    margin:0 0 5px 0
+    margin:0 0 5px
 }
 .navbar-side .navbar-nav .nav-item.last-row{
     margin:0
