--- a/application/themes/frostbret/assets/css/parts/sidebox_menu.css
+++ b/application/themes/frostbret/assets/css/parts/sidebox_menu.css
@@ -16,7 +16,7 @@
 .navbar-side .navbar-nav .nav-item {
 	width: 100%;
 	height: auto;
-	margin: 0 0 5px 0;
+	margin: 0 0 5px;
 } .navbar-side .navbar-nav .nav-item.last-row {margin: 0;}
 
 .navbar-side .navbar-nav .nav-item .nav-link {
