--- a/application/themes/frostbret/assets/css/parts/slider.css
+++ b/application/themes/frostbret/assets/css/parts/slider.css
@@ -175,7 +175,7 @@
 /* Slider: Button
 /*---------------------------------------------------------------*/
 #section-slider.section-text-slider .btn-large-holder {
-	margin: -2.5rem 0 0 0;
+	margin: -2.5rem 0 0;
 }
 
 /* Slider: Text
