--- a/application/themes/heaven/assets/css/global/form.css
+++ b/application/themes/heaven/assets/css/global/form.css
@@ -306,7 +306,7 @@ button i {
 
 	border-width: 8px;
 	border-style: solid;
-	border-color: #325195 transparent transparent transparent;
+	border-color: #325195 transparent transparent;
 }
 
 /* Buttons: Blue
