--- a/application/themes/heaven/assets/css/parts/wall.css
+++ b/application/themes/heaven/assets/css/parts/wall.css
@@ -5,7 +5,7 @@
 	width: 100%;
 	height: auto;
 
-	padding: 15rem 0 10rem 0;
+	padding: 15rem 0 10rem;
 
 	overflow: hidden;
 
@@ -153,7 +153,7 @@
 	width: 100%;
 	height: auto;
 
-	margin: 3rem 0 0 0 !important;
+	margin: 3rem 0 0 !important;
 
 	display: block;
 
