--- a/application/themes/heaven/modules/register/css/register.css
+++ b/application/themes/heaven/modules/register/css/register.css
@@ -93,7 +93,7 @@
 /* Register: Content: Form
 /*-----------------------------------------------------*/
 .page-register .register-content form {
-	margin: 3rem 0 0 0;
+	margin: 3rem 0 0;
 }
 
 .page-register .register-content form .form-group {}
