--- a/application/modules/sidebox_topvoters/css/topvoters.css
+++ b/application/modules/sidebox_topvoters/css/topvoters.css
@@ -21,7 +21,7 @@
     height: 119px;
     top: 0;
     left: 0;
-    margin: -59.5px auto 0 auto;
+    margin: -59.5px auto 0;
     z-index: 9;
     content: '';
     display: inline-block;
