--- a/application/themes/admin/assets/css/sass/gui/_accordions.scss
+++ b/application/themes/admin/assets/css/sass/gui/_accordions.scss
@@ -56,7 +56,7 @@
 	&.accordion-lg {
 		.card-header {
 			a {
-				padding: 15px 15px;
+				padding: 15px;
 				font-size: 1em;
 				font-weight: 600;
 			}
