--- a/application/themes/admin/assets/css/sass/gui/_carousels.scss
+++ b/application/themes/admin/assets/css/sass/gui/_carousels.scss
@@ -90,7 +90,6 @@
 			margin-top: -45px;
 			width: auto;
 			button[class*="owl-"], button[class*="owl-"]:hover, button[class*="owl-"]:active {
-				font-size: 18px;
 				background: transparent !important;
 				width: 18px;
 				font-size: 18px;
@@ -139,7 +138,7 @@
 	&.nav-bottom-inside {
 		.owl-nav {
 			position: relative;
-			margin: -4.3rem 0 0 0;
+			margin: -4.3rem 0 0;
 			padding: 0;
 			width: auto;
 			button.owl-prev, button.owl-next {
@@ -252,7 +251,7 @@
 .carousel-areas {
 	background: transparent url(../img/patterns/stripes.png) repeat 0 0;
 	margin-bottom: -10px;
-	padding: 10px 10px 0 10px;
+	padding: 10px 10px 0;
 	border-radius: 6px 6px 0 0;
 	.owl-carousel {
 		box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
