--- a/application/themes/admin/assets/css/sass/gui/_datepickers.scss
+++ b/application/themes/admin/assets/css/sass/gui/_datepickers.scss
@@ -199,7 +199,7 @@ html:not(.sidebar-light) {
 						}
 
 						&:first-child {
-							border-radius: 4px 0 0 0;
+							border-radius: 4px 0 0;
 						}
 
 						&:last-child {
