--- a/application/themes/admin/assets/css/sass/gui/_dividers.scss
+++ b/application/themes/admin/assets/css/sass/gui/_dividers.scss
@@ -3,19 +3,19 @@ hr {
 	border: 0;
 	height: 1px;
 	background-image: linear-gradient(to left, rgba(0,0,0,0), rgba(0,0,0,0.20), rgba(0,0,0,0));
-	margin: 22px 0 22px 0;
+	margin: 22px 0;
 }
 
 hr.short {
-	margin: 11px 0 11px 0;
+	margin: 11px 0;
 }
 
 hr.tall {
-	margin: 44px 0 44px 0;
+	margin: 44px 0;
 }
 
 hr.taller {
-	margin: 66px 0 66px 0;
+	margin: 66px 0;
 }
 
 hr.light {
