--- a/application/themes/admin/assets/css/sass/gui/_forms.scss
+++ b/application/themes/admin/assets/css/sass/gui/_forms.scss
@@ -393,7 +393,7 @@ html.dark {
 		&:last-child,
 		&:last-of-type {
 			.form-control {
-				border-radius: 0 0 4px 0;
+				border-radius: 0 0 4px;
 			}
 		}
 
@@ -495,7 +495,7 @@ input[type="checkbox"] {
 		position: absolute;
 		top: 50%;
 		left: 3px;
-		margin: -6px 0 0 0;
+		margin: -6px 0 0;
 		z-index: 2;
 		cursor: pointer;
 
@@ -632,7 +632,7 @@ html.dark {
 		position: absolute;
 		top: 50%;
 		left: 3px;
-		margin: -6px 0 0 0;
+		margin: -6px 0 0;
 		z-index: 2;
 		cursor: pointer;
 
@@ -757,8 +757,8 @@ html.dark {
 .validation-message ul {
 	display: none;
 	list-style: none;
-	margin: -20px -20px 30px -20px;
-	padding: 20px 20px 10px 20px;
+	margin: -20px -20px 30px;
+	padding: 20px 20px 10px;
 	border-bottom: 1px solid #FFCBCB;
 	background: #FFEFEF;
 
