--- a/application/themes/admin/assets/css/sass/gui/_gmaps.scss
+++ b/application/themes/admin/assets/css/sass/gui/_gmaps.scss
@@ -2,7 +2,7 @@
 @media only screen and (max-width: 767px) {
 
 	#gmap {
-		margin: -40px -15px 0 -15px;
+		margin: -40px -15px 0;
 	}
 
 	html.mobile-device {
@@ -36,7 +36,7 @@
 	}
 
 	p {
-		margin: 0 0 2px 0;
+		margin: 0 0 2px;
 		padding: 3px 55px 3px 0;
 		overflow: hidden;
 		white-space: nowrap;
