--- a/application/themes/default/assets/css/global/popup.css
+++ b/application/themes/default/assets/css/global/popup.css
@@ -85,7 +85,7 @@
 /* Popup box: Buttons
 /*---------------------------------------------------------------*/
 .popup-box .popup-buttons {
-	margin: 1rem 0 0 0;
+	margin: 1rem 0 0;
 	text-align: center;
 }
 
