--- a/application/themes/default/assets/css/global/realm.css
+++ b/application/themes/default/assets/css/global/realm.css
@@ -18,7 +18,7 @@
 	width: 100%;
 	height: 20px;
 
-	margin: 0.75rem 0 0 0;
+	margin: 0.75rem 0 0;
 	padding: 2px;
 
 	-webkit-box-shadow: var(--progressBar-box-shadow);
