--- a/application/themes/default/assets/css/overwrite.css
+++ b/application/themes/default/assets/css/overwrite.css
@@ -32,8 +32,8 @@
 /* [FCMS] Section header
 /*-------------------------------------------------------------------------*/
 .section-header {
-	margin: 0 0 1rem 0;
-	padding: 0 0 0.5rem 0;
+	margin: 0 0 1rem;
+	padding: 0 0 0.5rem;
 
 	font-size: 1.3rem;
 }
