--- a/application/themes/default/assets/css/parts/header.css
+++ b/application/themes/default/assets/css/parts/header.css
@@ -320,7 +320,7 @@
 	top: 50%;
 	left: 0;
 
-	margin: -1px 0 0 0;
+	margin: -1px 0 0;
 
 	content: '';
 	position: absolute;
@@ -479,7 +479,7 @@
 
 	left: 50%;
 
-	margin: -3px 0 0 0;
+	margin: -3px 0 0;
 
 	min-width: 200px;
 
