--- a/application/themes/frostbret/assets/css/global/realm.css
+++ b/application/themes/frostbret/assets/css/global/realm.css
@@ -4,7 +4,7 @@
 .poll_bar {
 	width: 100%;
 	height: 20px;
-	margin: 0.75rem 0 0 0;
+	margin: 0.75rem 0 0;
 	padding: 2px;
 	border-radius: 1px;
 	-moz-border-radius: 1px;
