--- a/application/themes/frostbret/assets/css/parts/footer.css
+++ b/application/themes/frostbret/assets/css/parts/footer.css
@@ -4,7 +4,7 @@
 .footer {
 	width: 100%;
 	height: auto;
-	margin: 5rem 0 0 0;
+	margin: 5rem 0 0;
 	background-color: #0a0e13;
 }
 
@@ -72,7 +72,7 @@
 	width: 100%;
 	height: auto;
 	z-index: 9;
-	padding: 0 0 10px 0;
+	padding: 0 0 10px;
 }
 
 .footer .navbar .navbar-nav {
@@ -115,7 +115,7 @@
 /*---------------------------------------------------------------*/
 .footer .footer-text {
 	color: #334450;
-	margin: 0 0 10px 0;
+	margin: 0 0 10px;
 	padding: 2rem;
 	font-size: 0.875rem;
 	text-align: center;
