--- a/application/themes/frostbret/assets/css/parts/topbar.css
+++ b/application/themes/frostbret/assets/css/parts/topbar.css
@@ -176,7 +176,7 @@
 	height: 2px;
 	top: 50%;
 	left: 0;
-	margin: -1px 0 0 0;
+	margin: -1px 0 0;
 	content: '';
 	position: absolute;
 	background-color: #bde2fa;
