--- a/application/themes/heaven/assets/css/global/popup.css
+++ b/application/themes/heaven/assets/css/global/popup.css
@@ -84,7 +84,7 @@
 /* Popup box: Buttons
 /*---------------------------------------------------------------*/
 .popup-box .popup-buttons {
-	margin: 1rem 0 0 0;
+	margin: 1rem 0 0;
 	text-align: center;
 }
 
