--- a/application/themes/heaven/assets/css/global/realm.css
+++ b/application/themes/heaven/assets/css/global/realm.css
@@ -14,7 +14,7 @@
 	width: 100%;
 	height: 20px;
 
-	margin: 0.75rem 0 0 0;
+	margin: 0.75rem 0 0;
 	padding: 2px;
 
 	-webkit-border-radius: var(--borderRadius-primary);
