--- a/application/themes/heaven/assets/css/parts/featured.css
+++ b/application/themes/heaven/assets/css/parts/featured.css
@@ -102,7 +102,7 @@
 /* Featured: Readmore
 /*---------------------------------------------------------------*/
 .featured-banner .banner-readmore {
-	margin: auto 0 0 0;
+	margin: auto 0 0;
 	text-align: right;
 }
 
