--- a/application/themes/heaven/assets/css/parts/header.css
+++ b/application/themes/heaven/assets/css/parts/header.css
@@ -222,7 +222,7 @@
 
 	border: none;
 
-	margin: -15px 0 0 0;
+	margin: -15px 0 0;
 	padding: 0;
 
 	z-index: 9;
@@ -440,7 +440,7 @@
 
 		left: 50%;
 
-		margin: -30px 0 0 0;
+		margin: -30px 0 0;
 
 		min-width: 200px;
 
