--- a/system/Debug/Toolbar/View/toolbar.css
+++ b/system/Debug/Toolbar/View/toolbar.css
@@ -86,7 +86,7 @@ body {
 #debug-bar span {
     display: inline-block;
     font-size: 10pt;
-    padding: .3em 1em .3em;
+    padding: .3em 1em;
     line-height: 1.0;
     vertical-align: baseline;
 }
@@ -110,7 +110,7 @@ body {
 #debug-bar .ci-label.active {
     font-weight: 400;
     border-color: #bbb;
-    padding: .3em 0.9em .3em;
+    padding: .3em 0.9em;
 }
 #debug-bar .tab {
     display: none;
@@ -181,7 +181,7 @@ body {
     background-color: #999;
 }
 #ci-databases table span {
-    padding: 0.3em 0 0.3em;
+    padding: 0.3em 0;
 }
 #ci-databases table tr td:first-child {
     width: 5%;
