--- a/application/css/tooltip.css
+++ b/application/css/tooltip.css
@@ -11,3 +11,36 @@
     z-index: 9999999;
     padding:1rem;
 }
+.character-tooltip {
+    min-width: 150px;
+}
+.character-tooltip .icon-frame.frame-56 {
+    position: absolute;
+    left: -72px;
+    top: -8px;
+    display: inline-block;
+    overflow: hidden;
+    padding: 1px;
+    background-color: #000;
+    background-position: 1px 1px;
+    background-repeat: no-repeat;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    border: 1px solid #434445;
+    border-bottom-color: #2f3032;
+    border-top-color: #b1b2b4;
+}
+.character-tooltip .icon-frame.frame-56 img {
+    display: block;
+    vertical-align: bottom;
+}
+.character-tooltip .character-name {
+    font-size: 16px;
+}
+.color-tooltip-2, .color-tooltip-horde {
+    color: #b30000;
+}
+.color-tooltip-1, .color-tooltip-alliance {
+    color: #247FAA
+}
