--- a/application/modules/levelup/css/levelup.css
+++ b/application/modules/levelup/css/levelup.css
@@ -6,7 +6,7 @@
 }
 
 #left form {
-    padding: 10px 20px 20px 20px;
+    padding: 10px 20px 20px;
     margin-top: 9px;
     border: 1px solid rgb(33, 26, 22);
     border-radius: 14px;
