Theme/Default: Unexpected empty block

--- a/application/themes/default/assets/css/global/popup.css
+++ b/application/themes/default/assets/css/global/popup.css
@@ -96,5 +96,5 @@
 	margin: 0 0.5rem !important;
 }
 
-.popup-box .popup-buttons .popup-button.type-action {}
+/*.popup-box .popup-buttons .popup-button.type-action {}*/
 .popup-box .popup-buttons .popup-button.type-cancel {opacity: 0.8;}
