--- a/application/themes/default/assets/css/global/tables.css
+++ b/application/themes/default/assets/css/global/tables.css
@@ -6,17 +6,17 @@ table {
 	border-collapse: collapse;
 }
 
-table thead {}
+/*table thead {}
 
-table thead tr {}
+table thead tr {}*/
 
 table thead tr th {
 	vertical-align: middle;
 }
 
-table tbody {}
+/*table tbody {}
 
-table tbody tr {}
+table tbody tr {}*/
 
 table tbody tr td {
 	vertical-align: middle;
@@ -98,9 +98,9 @@ table tbody tr td {
 
 /* Nice table: Head
 /*---------------------------------------------------------------*/
-.nice_table thead {}
+/*.nice_table thead {}
 
-.nice_table thead tr {}
+.nice_table thead tr {}*/
 
 .nice_table thead tr th,
 .nice_table tbody tr:first-child td {
@@ -117,7 +117,7 @@ table tbody tr td {
 
 /* Nice table: Body
 /*---------------------------------------------------------------*/
-.nice_table tbody {}
+/*.nice_table tbody {}*/
 
 .nice_table tbody tr {
 	-webkit-transition: var(--transition-primary);
