--- a/application/themes/default/assets/css/parts/header.css
+++ b/application/themes/default/assets/css/parts/header.css
@@ -157,9 +157,9 @@
 	font-family: var(--font-family-primary);
 }
 
-#mobileMenu .offcanvas-body .userbar .userbar-info .info-dropdown {}
+/*#mobileMenu .offcanvas-body .userbar .userbar-info .info-dropdown {}
 
-#mobileMenu .offcanvas-body .userbar .userbar-info .info-dropdown .dropdown {}
+#mobileMenu .offcanvas-body .userbar .userbar-info .info-dropdown .dropdown {}*/
 
 #mobileMenu .offcanvas-body .userbar .userbar-info .info-dropdown .dropdown .dropdown-toggle {
 	width: 26px;
@@ -198,7 +198,7 @@
 	height: auto;
 }
 
-#mobileMenu .offcanvas-body .navbar .navbar-nav .nav-item {}
+/*#mobileMenu .offcanvas-body .navbar .navbar-nav .nav-item {}*/
 
 /* Navbar: Link (idle) */
 #mobileMenu .offcanvas-body .navbar .navbar-nav .nav-item .nav-link {
@@ -334,7 +334,7 @@
 
 /* Header: Navbar: Collapse
 /*-----------------------------------------------------*/
-.header .navbar .navbar-collapse {}
+/*.header .navbar .navbar-collapse {}*/
 
 /* Header: Navbar: Nav
 /*-----------------------------------------------------*/
@@ -349,7 +349,7 @@
 
 /* Header: Navbar: Nav: Item
 /*-------------------------------------------*/
-.header .navbar .navbar-nav .nav-item {}
+/*.header .navbar .navbar-nav .nav-item {}*/
 
 /* Item (idle) */
 .header .navbar .navbar-nav .nav-item .nav-link {
@@ -441,10 +441,10 @@
 
 /* Header: Navbar: Nav: Dropdown
 /*-------------------------------------------*/
-.header .navbar .navbar-nav .dropdown {}
+/*.header .navbar .navbar-nav .dropdown {}*/
 
 /* Dropdown (toggle) */
-.header .navbar .navbar-nav .dropdown .dropdown-toggle {}
+/*.header .navbar .navbar-nav .dropdown .dropdown-toggle {}*/
 
 .header .navbar .navbar-nav .dropdown .dropdown-toggle .dropdown-arrow {
 	--arrow-rotate: 45deg;
