--- a/application/themes/default/assets/css/global/form.css
+++ b/application/themes/default/assets/css/global/form.css
@@ -188,14 +188,14 @@ input + span[id] img {
 /*-------------------------------------------------------------------------*/
 /* Form buttons
 /*-------------------------------------------------------------------------*/
-button,
+/*button,
 input[type='reset'],
 input[type='button'],
-input[type='submit'] {}
+input[type='submit'] {}*/
 
 /* Buttons: Hover
 /*---------------------------------------------------------------*/
-button:hover,
+/*button:hover,
 input[type='reset']:hover,
 input[type='button']:hover,
 input[type='submit']:hover,
@@ -203,7 +203,7 @@ input[type='submit']:hover,
 button:active,
 input[type='reset']:active,
 input[type='button']:active,
-input[type='submit']:active {}
+input[type='submit']:active {}*/
 
 /* Buttons: Disabled
 /*---------------------------------------------------------------*/
@@ -392,7 +392,7 @@ button i {
 
 /* Page form: Flex
 /*---------------------------------------------------------------*/
-.page_form > .row {}
+/*.page_form > .row {}*/
 
 .page_form > .row + .row {
 	margin-top: 1rem;
