--- a/application/themes/default/assets/css/global/realm.css
+++ b/application/themes/default/assets/css/global/realm.css
@@ -6,7 +6,7 @@
 	font-size: 1rem;
 }
 
-.realm .realm_online {}
+/*.realm .realm_online {}*/
 
 /*-------------------------------------------------------------------------*/
 /* Realm bar
