--- a/application/themes/default/assets/css/overwrite.css
+++ b/application/themes/default/assets/css/overwrite.css
@@ -54,7 +54,7 @@
 /*-------------------------------------------------------------------------*/
 /* [FCMS] Page sub body
 /*-------------------------------------------------------------------------*/
-.page-subbody {}
+/*.page-subbody {}*/
 
 .is-fullwidth .page-subbody {
 	-webkit-border-radius: var(--borderRadius-primary);
@@ -125,7 +125,7 @@
 
 /* [Popup] SweetAlert: Icon
 /*---------------------------------------------------------------*/
-.swal2-container .swal2-popup .swal2-icon {}
+/*.swal2-container .swal2-popup .swal2-icon {}*/
 
 /* Icon (success) */
 .swal2-container .swal2-popup .swal2-icon.swal2-success .swal2-success-fix,
@@ -222,7 +222,7 @@
 	background-color: var(--glassmorphism-background-color);
 }
 
-.dropdown .dropdown-menu li {}
+/*.dropdown .dropdown-menu li {}*/
 
 /* [BS] Dropdown: Menu: Item (idle)
 /*-----------------------------------------------------*/
@@ -313,7 +313,7 @@
 /* [BS] Dropdown: Responsive
 /*---------------------------------------------------------------*/
 @media screen and (min-width: 768px) { /* MD */
-	.dropdown {}
+	/*.dropdown {}*/
 
 	.dropdown .dropdown-menu li .dropdown-item {
 		font-size: 1rem;
@@ -383,7 +383,7 @@
 /*-------------------------------------------------------------------------*/
 /* [BS] Accordion
 /*-------------------------------------------------------------------------*/
-.accordion {}
+/*.accordion {}*/
 
 /* [BS] Accordion: Item
 /*---------------------------------------------------------------*/
@@ -398,7 +398,7 @@
 
 /* [BS] Accordion: Item: Header
 /*-----------------------------------------------------*/
-.accordion .accordion-item .accordion-header {}
+/*.accordion .accordion-item .accordion-header {}*/
 
 /* Button (idle) */
 .accordion .accordion-item .accordion-header .accordion-button {
@@ -600,7 +600,7 @@
 
 /* [BS] Nav pills: Item
 /*---------------------------------------------------------------*/
-.nav-pills .nav-item {}
+/*.nav-pills .nav-item {}*/
 
 /* [BS] Nav pills: Item: Link (idle)
 /*-----------------------------------------------------*/
@@ -664,7 +664,7 @@
 /*-------------------------------------------------------------------------*/
 /* [BS] Input group
 /*-------------------------------------------------------------------------*/
-.input-group {}
+/*.input-group {}*/
 
 .input-group .input-group-text {
 	color: var(--link-secondary-idle);
@@ -705,7 +705,7 @@
 
 /* [BS] Pagination: Item
 /*---------------------------------------------------------------*/
-.pagination .page-item {}
+/*.pagination .page-item {}*/
 
 .pagination .page-item.disabled {
 	cursor: not-allowed;
@@ -803,7 +803,7 @@
 
 /* [BS] Nav tabs: Item
 /*---------------------------------------------------------------*/
-.nav-tabs .nav-item {}
+/*.nav-tabs .nav-item {}*/
 
 /* [BS] Nav tabs: Item: Link (idle)
 /*-----------------------------------------------------*/
