--- a/application/themes/default/assets/css/parts/banners.css
+++ b/application/themes/default/assets/css/parts/banners.css
@@ -274,7 +274,7 @@
 /* Banners: Responsive
 /*---------------------------------------------------------------*/
 @media screen and (min-width: 992px) { /* Desktop */
-	.banners {}
+	/*.banners {}*/
 
 	/* Banners: Banner
 	/*---------------------------------------------------------------*/
@@ -300,7 +300,7 @@
 }
 
 @media screen and (min-width: 1200px) { /* Desktop */
-	.banners {}
+	/*.banners {}*/
 
 	/* Banners: Banner 01
 	/*---------------------------------------------------------------*/
