--- a/application/themes/default/assets/css/parts/box.css
+++ b/application/themes/default/assets/css/parts/box.css
@@ -228,7 +228,7 @@
 /*-------------------------------------------------------------------------*/
 /* Box: Widget (side)
 /*-------------------------------------------------------------------------*/
-.box[widget='side'] {}
+/*.box[widget='side'] {}*/
 
 /*-------------------------------------------------------------------------*/
 /* Box: Widget (top)
